wp-content/themes/CreativePortfolioResFree/style.css
/* ... */
.sy-pager { display: none !important; }
.logo_cont { float: left; max-width: 250px; margin-right: 25px; }
.full_logo_cont { padding: 0px 0 15px;  text-align: center; float: left; max-width: 250px; margin-left: 10px; }
.full_logo_cont img,
.logo_cont img { max-width: 100%; height: auto; }
.header_right_text { float: right; width: 300px; padding-bottom: 10px; }
.header_spacing { display: block; }
/*body.home .header_spacing { display: none; }*/
/*body.home .footer_copyright_cont { display: none; }*/
#header { background-color:rgba(255,255, 255, 0.70); /*position: fixed; top: 0; left: 0;*/ padding: 15px 0 0; width: 100%; z-index: 9999; }
/*body.home #header { background: none; }*/
.logo { /*float: left; margin-right: 55px;*/ }
.header_bottom { padding: 15px 0; }
.header_menu { float: right; margin-top: 0px; max-width: 900px; }
.header_menu ul { list-style-type: none; margin: 0; padding: 0; }
.header_menu ul li { float: left; margin-right: 10px; font-size: 14px; font-family: 'Lato', sans-serif; font-weight: 700;  text-transform: uppercase; color: #333; letter-spacing: 1.5px; position: relative; padding-bottom: 8px; margin-bottom: 5px; }
.header_menu ul li:last-child { margin-right: 0; }
.header_menu ul li a { color: #333; display: block; padding: 5px 15px; /*border-bottom: 3px solid #fff;*/ }
.header_menu ul li a:hover,
.header_menu ul li.current-menu-item a,
.header_menu ul li.current_page_item a { color: #000; text-decoration: none; /*border-bottom: 3px solid #000;*/ }
.header_menu ul li ul { position: absolute; top: 32px; left: 0; z-index: 100; display: none; }
.header_menu ul li ul li { float: none; margin: 0; width: 180px;  background-color: #fff; padding: 0; font-size: 12px;  }
.header_menu ul li ul li:first-child { border-top: none; }
.header_menu ul li ul li a { padding: 8px 10px; display: block; border-bottom: none; }
.header_menu ul li ul li a:hover { background-color: #f9f9f9; text-decoration: none; border: none; }
#gallery::-webkit-scrollbar { display: none !important; }
#gallery {  }
.header_search { float: right; width: 260px; position: relative; margin-left: 15px; }
.header_search input[type=text] { height: 30px; box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box; width: 100%; background-color: #F5F5F5; -moz-border-radius: 8px;
border-radius: 8px; border: none; }
.header_search_icon { position: absolute; top: 8px; right: 8px; }
/* Content */
#home_inside_cont { padding: 0 10px; }
#home_cont {  padding-top: 25px }
#content { padding-top: 25px; }

.cat { color: #999; text-align: center; margin: 0; font-size: 12px; font-family: 'Lato', sans-serif; font-weight: 300;   }
.cat a { color: #999; text-decoration: none; }
.cat a:hover { color: #000; text-decoration: none; }

.home_left { float: left; width: 770px; }
.home_box { float: left; width: 590px; margin-top: 25px; }
.home_box img { display: block; }
.home_box img,
.home_box iframe { width: 100%; height: 335px; }
.home_box h3 { text-align: center; font-size: 20px; font-family: 'Lato', sans-serif; font-weight: 400; color: #333; letter-spacing: 1.5px; }
.home_box_media { position: relative; }
.home_box_hover { position: absolute; width: 100%; height: 100%;  background: url('images/black-trans.png') repeat; top: 0; left: 0; display: none; }
.home_box_row { display: table; height: 100%; width: 100%; }
.home_box_cell { display: table-cell; padding: 10px 60px; vertical-align: middle; text-align: center; color: #fff; font-size: 15px; line-height: 21px; }
.home_featured { margin: 30px 0; text-align: center; font-size: 24px; }
.home_bottom_box_cont { margin-top: 45px; }
.home_bottom_box { float: left; width: 325px; margin-right: 60px; font-size: 16px; }
.home_bottom_box_last { width: 410px; margin-right: 0; }
h3.home_bottom_title { margin: 0 0 45px; font-size: 22px; font-weight: normal; padding-left: 85px; background: url('images/black-line.jpg') no-repeat; background-position: center left; }
.home_bottom_contact input[type=text],
.home_bottom_contact input[type=email],
.home_bottom_contact textarea { width: 100%;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box; background-color: #FCFCFC; border: 1px solid #E3E3E3; height: 40px; margin-top: 6px; padding-left: 8px; padding-right: 8px; }
.home_bottom_contact textarea { height: 190px; padding: 8px; }
.home_bottom_contact input[type=submit] { border: none; color: #fff; font-size: 16px; font-weight: bold; text-align: center; display: block; padding: 10px 0px; background-color: #BEBEBE; width: 100%; }
ul.home_bottom_blog_list { list-style-type: none; margin: 0; padding: 0; }
ul.home_bottom_blog_list li { margin-bottom: 13px; padding-bottom: 13px; border-bottom: 1px solid #ccc; }
ul.home_bottom_blog_list li h4 { font-size: 19px; font-weight: normal; margin: 0 0 10px; }
ul.home_bottom_blog_list li p { margin: 0;  font-size: 12px; }
/*.home_blog_box .read_more { float: right; display: block; padding: 5px 10px; color: #000; text-decoration: none; border: 1px solid #ccc; }*/
.archive_title { margin-bottom: 20px; font-size: 23px; }
.blog_box { margin-bottom: 25px; }
.blog_box .left { width: 300px; font-size: 14px; color: #999; }
.blog_box .left h3 { font-size: 28px; font-family: 'Lato', sans-serif; font-weight: 400; color: #333; letter-spacing: 1.5px; line-height: 33px;  }
.blog_box .right { width: 830px; font-size: 14px; }
.blog_box .right img,
.blog_box .right iframe { width: 830px; height: 415px; display: block; transition:all 0.3s ease-in-out; }
.blog_box .right p { padding-left: 90px; margin-top: 15px; font-size: 15px; font-family: 'Lato', sans-serif; font-weight: 400;   color: #666; letter-spacing: 1.5px; }
.blog_box .right img:hover { opacity:0.7;
filter:alpha(opacity=70); }
.archive_title { border-left: 20px solid #000; padding-left: 10px; text-transform: uppercase; }
.archive_box { margin-bottom: 30px; margin-right: 21px; font-size: 13px; width: 379px; float: left; position: relative; }
/* ... */

